common-applications/test-environment/message-center/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: message-center
  name: message-center
